--- a/Webapp/index.html
+++ b/Webapp/index.html
@@ -1,13 +1,10 @@
 <!doctype html>
-<html lang="en">
+<html lang="nl">
     <head>
         <meta charset="utf-8">
         <meta http-equiv="x-ua-compatible" content="ie=edge">
-        <title></title>
-        <meta name="description" content="Find out what the moon looks like right now.">
+        <title> NeoCage</title>
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <meta name="msapplication-TileColor" content="#e85e00">
-        <meta name="theme-color" content="#e85e00">
 
         <link rel="stylesheet" href="./style/screen.css">
 
