--- a/Webapp/index.html
+++ b/Webapp/index.html
@@ -8,6 +8,9 @@
 
         <link rel="stylesheet" href="./style/screen.css">
 
+        <script src="https://cdnjs.cloudflare.com/ajax/libs/paho-mqtt/1.0.1/mqttws31.js" type="text/javascript"></script>
+
+        <script src="./script/dataHandler.js"></script>
         <script src="./script/app.js"></script>
     </head>
     <body>
