--- a/Webapp/game.html
+++ b/Webapp/game.html
@@ -11,7 +11,7 @@
         <script src="./script/app.js"></script>
     </head>
     <body>
-        <main class="c-app">
+        <div class="c-app">
 
             <!-- div Gamestatus pagina -->
             <div class="c-status">
@@ -69,6 +69,6 @@
                 <button class="c-link c-link--skip"><u>Overslaan</u></button>
                 </div>
 
-        </main>
+        </div>
     </body>
 </html>
