--- a/Webapp/game.html
+++ b/Webapp/game.html
@@ -6,6 +6,7 @@
         <title>Neocage</title>
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
+        <link rel="stylesheet" href="./style/normalize.css">
         <link rel="stylesheet" href="./style/screen.css">
 
         <script src="./script/app.js"></script>
