--- a/Webapp/index.html
+++ b/Webapp/index.html
@@ -6,11 +6,12 @@
         <title>NeoCage</title>
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
+        <link rel="stylesheet" href="./style/normalize.css">
         <link rel="stylesheet" href="./style/screen.css">
 
         <script src="./script/app.js"></script>
     </head>
-    <body>
+    <body class="blue">
         <div class="c-app">
             <div class="c-startpage">
                 <div class="c-logo">
@@ -48,6 +49,9 @@
         </div>
 
         <div class="c-popup c-info">
+            <button class="o-button-reset c-popup__close">
+                <svg xmlns="http://www.w3.org/2000/svg" height="24" viewBox="0 0 24 24" width="24"><path d="M0 0h24v24H0z" fill="none"/><path d="M19 6.41L17.59 5 12 10.59 6.41 5 5 6.41 10.59 12 5 17.59 6.41 19 12 13.41 17.59 19 19 17.59 13.41 12z"/></svg>
+            </button>
             <h1 class="c-info__title">
                 The Rondo
             </h1>
@@ -76,14 +80,14 @@
                     </table>
                 </div>
             </div>
-            <c-button class="c-button c-button--start">
+            <button class="o-button-reset c-button c-button--start">
                 <svg class="c-button__svg" xmlns="http://www.w3.org/2000/svg" height="24" viewBox="0 0 24 24" width="24">
                     <path d="M0 0h24v24H0z" fill="none"/><path d="M8 5v14l11-7z"/>
                 </svg>
-            </c-button>
+            </button>
         </div>
 
-        <div class="c-popup c-popup--fit c-countdown">
+        <div class="c-popup c-popup--fit c-countdown" style="display: none;">
             <div class="c-countdown__game">
                 The Rondo
             </div>
