Common css for popup

--- a/Webapp/index.html
+++ b/Webapp/index.html
@@ -1,5 +1,5 @@
 <!doctype html>
-<html lang="nl">
+<html lang="nl" class="blue">
     <head>
         <meta charset="utf-8">
         <meta http-equiv="x-ua-compatible" content="ie=edge">
@@ -14,7 +14,7 @@
 
         <script src="./script/app.js"></script>
     </head>
-    <body class="blue">
+    <body>
         <div class="c-app">
             <div class="c-startpage">
                 <div class="c-logo">
