--- a/Webapp/index.html
+++ b/Webapp/index.html
@@ -60,54 +60,87 @@
             </footer>
         </div>
 
-        <div class="c-popup c-info">
-            <button class="o-button-reset c-popup__close">
-                <svg xmlns="http://www.w3.org/2000/svg" height="24" viewBox="0 0 24 24" width="24"><path d="M0 0h24v24H0z" fill="none"/><path d="M19 6.41L17.59 5 12 10.59 6.41 5 5 6.41 10.59 12 5 17.59 6.41 19 12 13.41 17.59 19 19 17.59 13.41 12z"/></svg>
-            </button>
-            <h1 class="c-info__title">
-                The Rondo
-            </h1>
-            <div class="c-info__rules c-infoblock">
-                <div class="c-infoblock__title">
-                    Spelregels
+        <div class="c-popup js-popup">
+            <div class="c-popup__content c-info">
+                <button class="o-button-reset c-popup__close js-popup-close">
+                    <svg xmlns="http://www.w3.org/2000/svg" height="24" viewBox="0 0 24 24" width="24"><path d="M0 0h24v24H0z" fill="none"/><path d="M19 6.41L17.59 5 12 10.59 6.41 5 5 6.41 10.59 12 5 17.59 6.41 19 12 13.41 17.59 19 19 17.59 13.41 12z"/></svg>
+                </button>
+                <h1 class="c-title c-info__title">
+                    The Rondo
+                </h1>
+                <div class="c-info__rules c-infoblock">
+                    <div class="c-infoblock__title">
+                        Spelregels
+                    </div>
+                    <div class="c-infoblock__text">
+                        De bedoeling van The Rondo is dat je alle targets zo snel mogelijk raakt. Alle targets van de kooi gaan aan. Jouw taak is om zo snel mogelijk alle targets te raken. Wees creatief om die topscore te verbreken.
+                    </div>
                 </div>
-                <div class="c-infoblock__text">
-                    De bedoeling van The Rondo is dat je alle targets zo snel mogelijk raakt. Alle targets van de kooi gaan aan. Jouw taak is om zo snel mogelijk alle targets te raken. Wees creatief om die topscore te verbreken.
+                <div class="c-info__score c-infoblock">
+                    <div class="c-infoblock__title">
+                        Scorebord
+                    </div>
+                    <div class="c-infoblock__table">
+                        <table cellspacing="0" class="c-table">
+                            <tbody class="c-table__body" class="js-scoreboard">
+                                <tr class="c-table__row">
+                                    <td class="c-table__item">Aaron</td>
+                                    <td class="c-table__item">0:10</td>
+                                </tr> 
+                                <tr class="c-table__row">
+                                    <td class="c-table__item">Aaron</td>
+                                    <td class="c-table__item">0:10</td>
+                                </tr> 
+                                <tr class="c-table__row">
+                                    <td class="c-table__item">Aaronaaaaaaaaaaaaaaaaaaaaa</td>
+                                    <td class="c-table__item">0:10</td>
+                                </tr> 
+                                <tr class="c-table__row">
+                                    <td class="c-table__item">Aaron</td>
+                                    <td class="c-table__item">0:10</td>
+                                </tr> 
+                                <tr class="c-table__row">
+                                    <td class="c-table__item">Aaron</td>
+                                    <td class="c-table__item">0:10</td>
+                                </tr> 
+                                <tr class="c-table__row">
+                                    <td class="c-table__item">Aaron</td>
+                                    <td class="c-table__item">0:10</td>
+                                </tr> 
+                                <tr class="c-table__row">
+                                    <td class="c-table__item">Aaron</td>
+                                    <td class="c-table__item">0:10</td>
+                                </tr> 
+                                <tr class="c-table__row">
+                                    <td class="c-table__item">Aaron</td>
+                                    <td class="c-table__item">0:10</td>
+                                </tr> 
+                            </tbody>
+                        </table>
+                    </div>
                 </div>
+                <button class="o-button-reset c-button">
+                    <svg class="c-button__svg" xmlns="http://www.w3.org/2000/svg" height="24" viewBox="0 0 24 24" width="24">
+                        <path d="M0 0h24v24H0z" fill="none"/><path d="M8 5v14l11-7z"/>
+                    </svg>
+                </button>
             </div>
-            <div class="c-info__score c-scoreboard">
-                <div class="c-infoblock__title">
-                    Scorebord
-                </div>
-                <div class="c-infoblock__table">
-                    <table class="c-table js-scoreboard">
-                        <tr>
-                            <td>Karel</td>
-                            <td>0:08</td>
-                        </tr>
-                        <tr>
-                            <td>Aaron</td>
-                            <td>0:10</td>
-                        </tr> 
-                    </table>
-                </div>
-            </div>
-            <button class="o-button-reset c-button">
-                <svg class="c-button__svg" xmlns="http://www.w3.org/2000/svg" height="24" viewBox="0 0 24 24" width="24">
-                    <path d="M0 0h24v24H0z" fill="none"/><path d="M8 5v14l11-7z"/>
-                </svg>
-            </button>
         </div>
 
-        <div class="c-popup c-popup--fit c-countdown" style="display: none;">
-            <div class="c-countdown__game">
-                The Rondo
-            </div>
-            <div class="c-countdown__text">
-                begint in
-            </div>
-            <div class="c-countdown__time">
-                5
+        <div class="c-popup c-popup--shown js-popup">
+            <div class="c-popup__content c-countdown">
+                <!-- <button class="o-button-reset c-popup__close js-popup-close">
+                    <svg xmlns="http://www.w3.org/2000/svg" height="24" viewBox="0 0 24 24" width="24"><path d="M0 0h24v24H0z" fill="none"/><path d="M19 6.41L17.59 5 12 10.59 6.41 5 5 6.41 10.59 12 5 17.59 6.41 19 12 13.41 17.59 19 19 17.59 13.41 12z"/></svg>
+                </button> -->
+                <div class="c-title c-countdown__game">
+                    The Rondo
+                </div>
+                <div class="c-subtitle c-countdown__text">
+                    begint in
+                </div>
+                <div class="c-countdown__time js-countdown">
+                    5
+                </div>
             </div>
         </div>
     </body>
