--- a/Webapp/index.html
+++ b/Webapp/index.html
@@ -12,6 +12,10 @@
         <link rel="stylesheet" href="./style/normalize.css">
         <link rel="stylesheet" href="./style/screen.css">
 
+
+        <script src="https://cdnjs.cloudflare.com/ajax/libs/paho-mqtt/1.0.1/mqttws31.js" type="text/javascript"></script>
+
+        <script src="./script/dataHandler.js"></script>
         <script src="./script/app.js"></script>
     </head>
     <body>
