--- a/Webapp/game.html
+++ b/Webapp/game.html
@@ -18,7 +18,7 @@
         
         <script src="./script/app.js"></script>
     </head>
-    <body>
+    <body class="js-game">
         <div class="c-app">
 
             <!-- div Gamestatus pagina -->
