--- a/Webapp/index.html
+++ b/Webapp/index.html
@@ -18,7 +18,7 @@
         <script src="./script/dataHandler.js"></script>
         <script src="./script/app.js"></script>
     </head>
-    <body>
+    <body class="js-app">
         <div class="c-app">
             <div class="c-startpage">
                 <div class="c-logo">
