gamemodes dynamisch weergeven

--- a/Webapp/index.html
+++ b/Webapp/index.html
@@ -29,7 +29,7 @@
                         Kies een spel
                     </h2>
                     <ul class="c-menu__list o-list js-gamemodes">
-                        <li class="c-gamemode js-gamemode">
+                        <!-- <li class="c-gamemode js-gamemode">
                             The Rondo
                         </li>
                         <li class="c-gamemode js-gamemode">
@@ -40,7 +40,7 @@
                         </li>
                         <li class="c-gamemode js-gamemode">
                             Training mode
-                        </li>
+                        </li> -->
                     </ul>
                 </div>
             </div>
