Popup almost finished

--- a/Webapp/game.html
+++ b/Webapp/game.html
@@ -73,12 +73,13 @@
                     <form class="c-overview__form c-form">
                         <label class="c-label" for="naam">Vul je naam in om je score op te slaan</label><br>
                         <input class="c-input" type="text" id="naam" name="naam"><br>
-                        <button class="c-button c-button--save">Score opslaan</button>
+                        <button class="o-button-reset c-button c-button--save">Score opslaan</button>
                     </form>
-                    <button class="c-link c-link--skip"><u>Overslaan</u></button>
+                    <p class="o-link">
+                        <a href="./index.html">Overslaan</a>    
+                    </p>
                 </div>
             </div>
-                
         </div>
     </body>
 </html>
