gitflow-feature-stash: js_markup
Cleaned up js

--- a/Webapp/game.html
+++ b/Webapp/game.html
@@ -27,7 +27,7 @@
                     <h1 class ="c-title">Double trouble</h1>   
                 </div>
             
-                <div class="c-status__info">
+                <div class="c-status__info" class="js-cards-holder">
                     <!-- Timer -->
                     <div class="c-card">
                         <h2 class="c-subtitle">Verstreken tijd</h2>
