--- a/Webapp/index.html
+++ b/Webapp/index.html
@@ -64,19 +64,19 @@
             </footer>
         </div>
 
-        <div class="c-popup js-popup">
+        <div class="c-popup js-popup-game">
             <div class="c-popup__content c-info">
                 <button class="o-button-reset c-popup__close js-popup-close">
                     <svg xmlns="http://www.w3.org/2000/svg" height="24" viewBox="0 0 24 24" width="24"><path d="M0 0h24v24H0z" fill="none"/><path d="M19 6.41L17.59 5 12 10.59 6.41 5 5 6.41 10.59 12 5 17.59 6.41 19 12 13.41 17.59 19 19 17.59 13.41 12z"/></svg>
                 </button>
-                <h1 class="c-title c-info__title">
+                <h1 class="c-title c-info__title js-game-title">
                     The Rondo
                 </h1>
                 <div class="c-info__rules c-infoblock">
                     <div class="c-infoblock__title">
                         Spelregels
                     </div>
-                    <div class="c-infoblock__text">
+                    <div class="c-infoblock__text js-game-desc">
                         De bedoeling van The Rondo is dat je alle targets zo snel mogelijk raakt. Alle targets van de kooi gaan aan. Jouw taak is om zo snel mogelijk alle targets te raken. Wees creatief om die topscore te verbreken.
                     </div>
                 </div>
@@ -123,7 +123,7 @@
                         </table>
                     </div>
                 </div>
-                <button class="o-button-reset c-button">
+                <button class="o-button-reset c-button js-game-start">
                     <svg class="c-button__svg" xmlns="http://www.w3.org/2000/svg" height="24" viewBox="0 0 24 24" width="24">
                         <path d="M0 0h24v24H0z" fill="none"/><path d="M8 5v14l11-7z"/>
                     </svg>
@@ -131,7 +131,7 @@
             </div>
         </div>
 
-        <div class="c-popup js-popup">
+        <div class="c-popup js-popup-countdown">
             <div class="c-popup__content c-countdown">
                 <!-- <button class="o-button-reset c-popup__close js-popup-close">
                     <svg xmlns="http://www.w3.org/2000/svg" height="24" viewBox="0 0 24 24" width="24"><path d="M0 0h24v24H0z" fill="none"/><path d="M19 6.41L17.59 5 12 10.59 6.41 5 5 6.41 10.59 12 5 17.59 6.41 19 12 13.41 17.59 19 19 17.59 13.41 12z"/></svg>
