--- a/Webapp/index.html
+++ b/Webapp/index.html
@@ -64,7 +64,7 @@
             </footer>
         </div>
 
-        <div class="c-popup c-popup--shown  js-popup-game">
+        <div class="c-popup js-popup-game">
             <div class="c-popup__content c-info">
                 <button class="o-button-reset c-popup__close js-popup-close">
                     <svg xmlns="http://www.w3.org/2000/svg" height="24" viewBox="0 0 24 24" width="24"><path d="M0 0h24v24H0z" fill="none"/><path d="M19 6.41L17.59 5 12 10.59 6.41 5 5 6.41 10.59 12 5 17.59 6.41 19 12 13.41 17.59 19 19 17.59 13.41 12z"/></svg>
@@ -86,9 +86,9 @@
                     </div>
                     <div class="c-infoblock__table">
                         <table cellspacing="0" class="c-table">
-                            <tbody class="c-table__body" class="js-scoreboard">
-                                <tr class="c-table__row">
-                                    <td class="c-table__item">Aaron</td>
+                            <tbody class="c-table__body js-scoreboard">
+                                <!-- <tr class="c-table__row"> -->
+                                    <!-- <td class="c-table__item">Aaron</td>
                                     <td class="c-table__item">0:10</td>
                                 </tr> 
                                 <tr class="c-table__row">
@@ -118,7 +118,7 @@
                                 <tr class="c-table__row">
                                     <td class="c-table__item">Aaron</td>
                                     <td class="c-table__item">0:10</td>
-                                </tr> 
+                                </tr>  -->
                             </tbody>
                         </table>
                     </div>
