CSS position fixes

--- a/Webapp/game.html
+++ b/Webapp/game.html
@@ -21,7 +21,7 @@
     <body class="js-gamepage">
         <div class="c-app">
             <!-- div Gamestatus pagina -->
-            <div class="c-status">
+            <div class="c-status o-container">
                 <div class="c-status__title">
                     <h1 class ="c-title js-status-game">Game naam</h1>   
                 </div>
@@ -46,11 +46,11 @@
                         </div>
                     </div>
                 </div>
-                <div class="c-status__button">
-                    <button class="o-button-reset c-button c-button--stop">
-                        <svg class="c-button__svg" xmlns="http://www.w3.org/2000/svg" height="24" viewBox="0 0 24 24" width="24"><path d="M0 0h24v24H0z" fill="none"/><path d="M6 6h12v12H6z"/></svg>
-                    </button>
-                </div>
+            </div>
+            <div class="c-stopbutton o-container">
+                <button class="o-button-reset c-button c-button--stop">
+                    <svg class="c-button__svg" xmlns="http://www.w3.org/2000/svg" height="24" viewBox="0 0 24 24" width="24"><path d="M0 0h24v24H0z" fill="none"/><path d="M6 6h12v12H6z"/></svg>
+                </button>
             </div>
         
             <!-- div Score pagina -->
