--- a/Webapp/index.html
+++ b/Webapp/index.html
@@ -140,27 +140,11 @@
             </div>
         </div>
 
-        <div class="c-popup js-popup-starting">
-            <div class="c-popup__content c-countdown">
-                <!-- <button class="o-button-reset c-popup__close js-popup-close">
-                    <svg xmlns="http://www.w3.org/2000/svg" height="24" viewBox="0 0 24 24" width="24"><path d="M0 0h24v24H0z" fill="none"/><path d="M19 6.41L17.59 5 12 10.59 6.41 5 5 6.41 10.59 12 5 17.59 6.41 19 12 13.41 17.59 19 19 17.59 13.41 12z"/></svg>
-                </button> -->
-                <div class="c-title c-countdown__game">
-                    The Rondo
-                </div>
-                <div class="c-subtitle c-countdown__text">
-                    wordt gestart in
-                </div>
-                <div class="c-timer o-container">
-                    <svg class="c-timer__svg" viewBox="0 0 100 100" xmlns="http://www.w3.org/2000/svg">
-                        <g class="c-timer__circle">
-                            <circle class="c-timer__path--elapsed" cx="50" cy="50" r="45" />
-                            <circle class="c-timer__path--remaining js-timer-circle" cx="50" cy="50" r="45" />
-                        </g>
-                    </svg>
-                    <span class="c-timer__text js-timer-seconds">5</span>
-                    </span>
-                </div>
+        <div class="c-popup c-popup--shown js-popup-starting">
+            <div class="c-popup__content c-loading">
+                <svg class="c-loading__svg" viewBox="0 0 100 100" xmlns="http://www.w3.org/2000/svg">
+                    <circle class="c-loading__circle" cx="50" cy="50" r="45" />
+                </svg>
             </div>
         </div>
     </body>
