Added show and hide loading popup in js

--- a/Webapp/index.html
+++ b/Webapp/index.html
@@ -140,7 +140,7 @@
             </div>
         </div>
 
-        <div class="c-popup c-popup--shown js-popup-starting">
+        <div class="c-popup js-popup-loading">
             <div class="c-popup__content c-loading">
                 <svg class="c-loading__svg" viewBox="0 0 100 100" xmlns="http://www.w3.org/2000/svg">
                     <circle class="c-loading__circle" cx="50" cy="50" r="45" />
