stop game now works

--- a/Webapp/game.html
+++ b/Webapp/game.html
@@ -69,7 +69,7 @@
                 </div>
             </div>
             <div class="c-stopbutton o-container">
-                <button class="o-button-reset c-button c-button--stop">
+                <button class="o-button-reset c-button c-button--stop js-stop">
                     <svg class="c-button__svg" xmlns="http://www.w3.org/2000/svg" height="24" viewBox="0 0 24 24" width="24"><path d="M0 0h24v24H0z" fill="none"/><path d="M6 6h12v12H6z"/></svg>
                 </button>
             </div>
