--- a/Webapp/game.html
+++ b/Webapp/game.html
@@ -102,6 +102,14 @@
                     </p>
                 </div>
             </div>
+
+            <div class="c-popup js-popup-loading">
+                <div class="c-popup__content c-loading">
+                    <svg class="c-loading__svg" viewBox="0 0 100 100" xmlns="http://www.w3.org/2000/svg">
+                        <circle class="c-loading__circle" cx="50" cy="50" r="45" />
+                    </svg>
+                </div>
+            </div>
         </div>
     </body>
 </html>
