--- a/Webapp/game.html
+++ b/Webapp/game.html
@@ -102,6 +102,16 @@
                     </p>
                 </div>
             </div>
+            <div class="c-popup c-popup-error">
+                <div class="c-popup__content">
+                    <div class="c-error__title">Er is een fout opgetreden</div>
+                    <div class="c-error__info">
+                        <svg class="c-error__info-icon u-beta-textcolor" xmlns="http://www.w3.org/2000/svg" height="37" viewBox="0 0 24 24" width="37"><path d="M0 0h24v24H0V0z" fill="none"/><path d="M11 15h2v2h-2zm0-8h2v6h-2zm.99-5C6.47 2 2 6.48 2 12s4.47 10 9.99 10C17.52 22 22 17.52 22 12S17.52 2 11.99 2zM12 20c-4.42 0-8-3.58-8-8s3.58-8 8-8 8 3.58 8 8-3.58 8-8 8z"/></svg>
+                        <div class="c-error__info-text">Hier komt de informatie over de error!</div>
+                    </div>
+                </div>
+            </div>
+
         </div>
     </body>
 </html>
