--- a/Webapp/game.html
+++ b/Webapp/game.html
@@ -75,7 +75,7 @@
             </div>
         
             <!-- div Score pagina -->
-            <div class="c-popup js-popup-end">
+            <div class="c-popup js-popup-end c-popup--shown">
                 <div class="c-popup__content c-overview">
                     <button class="o-button-reset c-popup__close js-popup-close">
                         <svg xmlns="http://www.w3.org/2000/svg" height="24" viewBox="0 0 24 24" width="24"><path d="M0 0h24v24H0z" fill="none"/><path d="M19 6.41L17.59 5 12 10.59 6.41 5 5 6.41 10.59 12 5 17.59 6.41 19 12 13.41 17.59 19 19 17.59 13.41 12z"/></svg>
@@ -94,7 +94,9 @@
                     <!-- Naam invoeren -->
                     <form class="c-overview__form c-form">
                         <label class="c-label " for="naam">Vul je naam in om je score op te slaan</label><br>
-                        <input class="c-input js-input-name" type="text" id="naam" name="naam"><br>
+                        <!-- u-validation-error -->
+                        <input class="c-input js-input-name" type="text" id="naam" name="naam">
+                        <span class="c-validation">Vul een naam in!</span>
                         <button class="o-button-reset c-button c-button--save js-input-submit">Score opslaan</button>
                     </form>
                     <p class="o-link">
