html+css bijwerken

--- a/Webapp/game.html
+++ b/Webapp/game.html
@@ -96,7 +96,8 @@
                         <label class="c-label " for="naam">Vul je naam in om je score op te slaan</label><br>
                         <!-- u-validation-error -->
                         <input class="c-input js-input-name" type="text" id="naam" name="naam">
-                        <span class="c-validation">Vul een naam in!</span>
+                        <!-- u-not-valid -->
+                        <span class="c-validation js-validation">Vul een naam in!</span>
                         <button class="o-button-reset c-button c-button--save js-input-submit">Score opslaan</button>
                     </form>
                     <p class="o-link">
