stond nog op shown xs

--- a/Webapp/game.html
+++ b/Webapp/game.html
@@ -75,7 +75,7 @@
             </div>
         
             <!-- div Score pagina -->
-            <div class="c-popup js-popup-end c-popup--shown">
+            <div class="c-popup js-popup-end">
                 <div class="c-popup__content c-overview">
                     <h1 class=" c-title c-overview__title js-end-title">Double Trouble</h1>
                     <!-- Score -->
