--- a/Webapp/game.html
+++ b/Webapp/game.html
@@ -47,13 +47,14 @@
                     </div>
 
                     <div class="js-status-cards o-container">
+
                         <!-- Score -->
                         <div class="c-card">
                             <h2 class="c-subtitle">Score</h2>
                             <h5 class="c-card__value">XX</h5>
                         </div>
-
                         <h2 class="c-subtitle">Team game</h2>
+
                         <!-- Score for teams -->
                         <div class="c-minicards">
                             <div class="c-minicard">
@@ -68,6 +69,7 @@
                     </div>
                 </div>
             </div>
+
             <div class="c-stopbutton o-container">
                 <button class="o-button-reset c-button c-button--stop js-stop">
                     <svg class="c-button__svg" xmlns="http://www.w3.org/2000/svg" height="24" viewBox="0 0 24 24" width="24"><path d="M0 0h24v24H0z" fill="none"/><path d="M6 6h12v12H6z"/></svg>
@@ -78,9 +80,9 @@
             <div class="c-popup js-popup-end">
                 <div class="c-popup__content c-overview">
                     <h1 class=" c-title c-overview__title js-end-title">Double Trouble</h1>
+
                     <!-- Score -->
                     <div class="js-end-cards o-container">
-                        <!-- Score -->
                         <div class="c-card">
                             <h2 class="c-subtitle">Score</h2>
                             <h5 class="c-card__value">XX</h5>
@@ -90,8 +92,10 @@
                     <!-- Naam invoeren -->
                     <form class="c-overview__form c-form">
                         <label class="c-label " for="naam">Vul je naam in om je score op te slaan</label><br>
-                        <!-- u-validation-error -->
+
+                        <!-- Add: u-validation-error  for pink inputbox-->
                         <input class="c-input js-input-name" type="text" id="naam" name="naam">
+                        
                         <!-- u-not-valid -->
                         <span class="c-validation js-validation">Vul een naam in!</span>
                         <button class="o-button-reset c-button c-button--save js-input-submit">Score opslaan</button>
