--- a/Webapp/index.html
+++ b/Webapp/index.html
@@ -38,18 +38,6 @@
                         Kies een spel
                     </h2>
                     <ul class="c-menu__list o-list js-gamemodes">
-                        <!-- <li class="c-gamemode js-gamemode">
-                            The Rondo
-                        </li>
-                        <li class="c-gamemode js-gamemode">
-                            Quicky Tricky
-                        </li>
-                        <li class="c-gamemode js-gamemode">
-                            Double Trouble
-                        </li>
-                        <li class="c-gamemode js-gamemode">
-                            Training mode
-                        </li> -->
                     </ul>
                 </div>
             </div>
@@ -96,38 +84,9 @@
                     <div class="c-infoblock__table">
                         <table cellspacing="0" class="c-table">
                             <tbody class="c-table__body js-scoreboard">
-                                <!-- <tr class="c-table__row"> -->
-                                    <!-- <td class="c-table__item">Aaron</td>
-                                    <td class="c-table__item">0:10</td>
-                                </tr> 
                                 <tr class="c-table__row">
-                                    <td class="c-table__item">Aaron</td>
-                                    <td class="c-table__item">0:10</td>
+                                    <td class="c-table__item">No Highscores Available (yet)</td>
                                 </tr> 
-                                <tr class="c-table__row">
-                                    <td class="c-table__item">Aaronaaaaaaaaaaaaaaaaaaaaa</td>
-                                    <td class="c-table__item">0:10</td>
-                                </tr> 
-                                <tr class="c-table__row">
-                                    <td class="c-table__item">Aaron</td>
-                                    <td class="c-table__item">0:10</td>
-                                </tr> 
-                                <tr class="c-table__row">
-                                    <td class="c-table__item">Aaron</td>
-                                    <td class="c-table__item">0:10</td>
-                                </tr> 
-                                <tr class="c-table__row">
-                                    <td class="c-table__item">Aaron</td>
-                                    <td class="c-table__item">0:10</td>
-                                </tr> 
-                                <tr class="c-table__row">
-                                    <td class="c-table__item">Aaron</td>
-                                    <td class="c-table__item">0:10</td>
-                                </tr> 
-                                <tr class="c-table__row">
-                                    <td class="c-table__item">Aaron</td>
-                                    <td class="c-table__item">0:10</td>
-                                </tr>  -->
                             </tbody>
                         </table>
                     </div>
