Improved Input Validation + Score saving hotfix

--- a/Webapp/game.html
+++ b/Webapp/game.html
@@ -98,7 +98,7 @@
                         
                         <!-- u-not-valid -->
                         <span class="c-validation js-validation">Vul een naam in!</span>
-                        <button class="o-button-reset c-button c-button--save js-input-submit">Score opslaan</button>
+                        <button type="button" class="o-button-reset c-button c-button--save js-input-submit">Score opslaan</button>
                     </form>
                     <p class="o-link">
                         <a href="./index.html">Overslaan</a>    
